@@ -1,23 +1,25 @@
 // Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.tools.build.bazel.jvmIncBuilder.impl.graph;
 
-import com.github.benmanes.caffeine.cache.Caffeine;
-import com.github.benmanes.caffeine.cache.LoadingCache;
-import it.unimi.dsi.fastutil.ints.Int2ObjectMap;
-import it.unimi.dsi.fastutil.ints.Int2ObjectOpenHashMap;
-import it.unimi.dsi.fastutil.objects.Object2IntMap;
-import it.unimi.dsi.fastutil.objects.Object2IntOpenHashMap;
 import org.h2.mvstore.FileStore;
 import org.h2.mvstore.MVMap;
 import org.h2.mvstore.MVStore;
 import org.h2.mvstore.WriteBuffer;
 import org.h2.mvstore.type.BasicDataType;
 import org.jetbrains.annotations.Nullable;
-import org.jetbrains.jps.dependency.*;
+import org.jetbrains.jps.dependency.ComparableTypeExternalizer;
+import org.jetbrains.jps.dependency.Enumerator;
+import org.jetbrains.jps.dependency.Maplet;
+import org.jetbrains.jps.dependency.MapletFactory;
+import org.jetbrains.jps.dependency.MultiMaplet;
+import org.jetbrains.jps.dependency.ReferenceID;
+import org.jetbrains.jps.dependency.Usage;
 import org.jetbrains.jps.dependency.impl.CachingMaplet;
 import org.jetbrains.jps.dependency.impl.CachingMultiMaplet;
 import org.jetbrains.jps.dependency.impl.GraphDataInputImpl;
 import org.jetbrains.jps.dependency.impl.GraphDataOutputImpl;
+import org.jetbrains.jps.dependency.impl.GraphElementInterner;
+import org.jetbrains.jps.dependency.impl.ObjectEnumerator;
 
 import java.io.Closeable;
 import java.io.Flushable;
@@ -25,18 +27,22 @@ import java.io.IOException;
 import java.nio.ByteBuffer;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.*;
+import java.util.HashSet;
+import java.util.Map;
+import java.util.Set;
 import java.util.function.Function;
+
+import static org.jetbrains.jps.util.Iterators.map;
 
 // suitable for relatively small amounts of stored data
 public final class PersistentMVStoreMapletFactory implements MapletFactory, Closeable, Flushable {
   private static final int BASE_CACHE_SIZE = 512;
   private final MVSEnumerator myEnumerator;
   private final Function<Object, Object> myDataInterner;
-  private final LoadingCache<Object, Object> myInternerCache;
-  //private final LoadingCache<String, String> myStringsInternerCache;
   private final int myCacheSize;
   private final MVStore myStore;
+
+  private final long myInitialVersion;
 
   public PersistentMVStoreMapletFactory(String filePath, int maxBuilderThreads) throws IOException {
     Files.createDirectories(Path.of(filePath).getParent());
@@ -48,15 +54,21 @@ public final class PersistentMVStoreMapletFactory implements MapletFactory, Clos
       .cacheConcurrency(getConcurrencyLevel(maxBuilderThreads))
       .open();
     myStore.setVersionsToKeep(0);
-
+    myInitialVersion = myStore.getCurrentVersion();
     // MVStore counter-based enumerator?
     myEnumerator = new MVSEnumerator(myStore);
     final int maxGb = (int) (Runtime.getRuntime().maxMemory() / 1_073_741_824L);
-    myCacheSize = BASE_CACHE_SIZE * Math.min(Math.max(1, maxGb), 5); // increase by BASE_CACHE_SIZE for every additional Gb
+    myCacheSize = BASE_CACHE_SIZE * Math.clamp(maxGb, 1, 5); // increase by BASE_CACHE_SIZE for every additional Gb
 
-    myInternerCache = Caffeine.newBuilder().maximumSize(myCacheSize).build(key -> key);
-    //myStringsInternerCache = Caffeine.newBuilder().maximumSize(myCacheSize).build(key -> key);
-    myDataInterner = elem -> elem instanceof Usage? myInternerCache.get(elem) : /*elem instanceof String? myStringsInternerCache.get((String) elem) :*/ elem;
+    myDataInterner = elem -> {
+      if (elem instanceof Usage) {
+        return GraphElementInterner.intern((Usage)elem);
+      }
+      if (elem instanceof ReferenceID) {
+        return GraphElementInterner.intern((ReferenceID)elem);
+      }
+      return elem;
+    };
   }
 
   private static int getConcurrencyLevel(int builderThreads) {
@@ -66,6 +78,10 @@ public final class PersistentMVStoreMapletFactory implements MapletFactory, Clos
       next *= 2;
     }
     return result;
+  }
+
+  public boolean hasUpdates() {
+    return myInitialVersion != myStore.getCurrentVersion();
   }
 
   @Override
@@ -86,14 +102,9 @@ public final class PersistentMVStoreMapletFactory implements MapletFactory, Clos
 
   @Override
   public void close() {
-    try {
-      myStore.commit();// first commit all open maps, that might use enumerator for serialization
-      myEnumerator.flush(); // save enumerator state
-      myStore.close(getCompactionTimeMs()); // completely close the store commiting the rest of unsaved data
-    }
-    finally {
-      myInternerCache.invalidateAll();
-    }
+    myStore.commit();// first commit all open maps, that might use enumerator for serialization
+    myEnumerator.flush(); // save enumerator state
+    myStore.close(getCompactionTimeMs()); // completely close the store commiting the rest of unsaved data
   }
 
   /*
@@ -180,29 +191,22 @@ public final class PersistentMVStoreMapletFactory implements MapletFactory, Clos
   }
 
   private static final class MVSEnumerator implements Enumerator {
-    private final Object2IntMap<String> myToIntMap = new Object2IntOpenHashMap<>();
-    private final Int2ObjectMap<String> myToStringMap = new Int2ObjectOpenHashMap<>();
-    private final MVMap<String, Integer> myStoreMap;
-
-    record EnumeratorEntry(String str, int num) {}
-    private List<EnumeratorEntry> myDelta = new ArrayList<>();
+    private final ObjectEnumerator<String> myEnumerator;
+    // MVMap is a sorted map implementation using a B+ tree. Keys are sorted in their natural ordering.
+    private final MVMap<Integer, String> myStoreMap;
 
     MVSEnumerator(MVStore store) {
       myStoreMap = store.openMap("string-table");
-      for (Map.Entry<String, Integer> entry : myStoreMap.entrySet()) {
-        String str = entry.getKey();
-        int num = entry.getValue();
-        myToIntMap.put(str, num);
-        myToStringMap.put(num, str);
-      }
+      // expect sequential order in the myStoreMap
+      myEnumerator = new ObjectEnumerator<>(map(myStoreMap.entrySet(), Map.Entry::getValue), GraphElementInterner::intern);
     }
 
     @Override
     public synchronized String toString(int num) throws IOException {
-      String str = myToStringMap.get(num);
+      String str = myEnumerator.lookup(num);
       if (str == null) {
         throw new IOException(
-          "Mapping for number " + num + " does not exist. Current string table size: " + myToStringMap.size() + " entries."
+          "Mapping for number " + num + " does not exist. Current string table size: " + myEnumerator.getTableSize() + " entries."
         );
       }
       return str;
@@ -210,29 +214,16 @@ public final class PersistentMVStoreMapletFactory implements MapletFactory, Clos
 
     @Override
     public synchronized int toNumber(String str) {
-      int currentSize = myToIntMap.size();
-      int num = myToIntMap.getOrDefault(str, currentSize);
-      if (num == currentSize) { // not in map yet
-        myToIntMap.put(str, num);
-        myToStringMap.put(num, str);
-        myDelta.add(new EnumeratorEntry(str, num));
-      }
-      return num;
+      return myEnumerator.toNumber(str);
     }
 
-    public boolean flush() {
-      List<EnumeratorEntry> delta;
-      synchronized (this) {
-        if (myDelta.isEmpty()) {
-          return false;
-        }
-        delta = myDelta;
-        myDelta = new ArrayList<>();
+    public synchronized boolean flush() {
+      try {
+        return myEnumerator.drainUnsaved((key, value) -> myStoreMap.put(key, value));
       }
-      for (EnumeratorEntry entry : delta) {
-        myStoreMap.put(entry.str, entry.num);
+      catch (IOException e) {
+        throw new RuntimeException(e);
       }
-      return true;
     }
   }
 }
