@@ -364,7 +364,7 @@ public class UsageViewImpl implements UsageViewEx {
         synchronized (parentNode) {
           otherNodes = ContainerUtil.filter(parentNode.getChildren(), n -> n.isExcluded() != almostAllChildrenExcluded);
         }
-        if (otherNodes.size() == 1 && otherNodes.get(0) == node) {
+        if (otherNodes.size() == 1 && otherNodes.getFirst() == node) {
           nodes.add(parentNode);
           collectParentNodes(parentNode, almostAllChildrenExcluded, nodes);
         }
@@ -757,7 +757,7 @@ public class UsageViewImpl implements UsageViewEx {
 
       UsageContextPanel.Provider[] extensions = UsageContextPanel.Provider.EP_NAME.getExtensions(myProject);
       List<UsageContextPanel.Provider> myUsageContextPanelProviders =
-        ContainerUtil.filter(extensions, provider -> ReadAction.compute(() -> provider.isAvailableFor(this)));
+        ContainerUtil.filter(extensions, provider -> ReadAction.computeBlocking(() -> provider.isAvailableFor(this)));
       Map<@NlsContexts.TabTitle String, JComponent> components = new LinkedHashMap<>();
       for (UsageContextPanel.Provider provider : myUsageContextPanelProviders) {
         JComponent component;
@@ -1153,7 +1153,7 @@ public class UsageViewImpl implements UsageViewEx {
 
   private void rulesChanged() {
     try (AccessToken ignore = SlowOperations.knownIssue("IJPL-164976")) {
-      ReadAction.run(() -> {
+      ReadAction.runBlocking(() -> {
         rulesChangedImpl();
       });
     }
@@ -1407,7 +1407,7 @@ public class UsageViewImpl implements UsageViewEx {
   @Override
   public void appendUsage(@NotNull Usage usage) {
     if (ApplicationManager.getApplication().isDispatchThread()) {
-      addUpdateRequest(() -> ReadAction.run(() -> doAppendUsage(usage)));
+      addUpdateRequest(() -> ReadAction.runBlocking(() -> doAppendUsage(usage)));
     }
     else {
       doAppendUsage(usage);
@@ -1432,7 +1432,7 @@ public class UsageViewImpl implements UsageViewEx {
   @Override
   public @NotNull CompletableFuture<?> appendUsagesInBulk(@NotNull Collection<? extends Usage> usages) {
     CompletableFuture<Object> result = new CompletableFuture<>();
-    addUpdateRequest(() -> ReadAction.run(() -> {
+    addUpdateRequest(() -> ReadAction.runBlocking(() -> {
       try {
         for (Usage usage : usages) {
           doAppendUsage(usage);
@@ -1851,7 +1851,7 @@ public class UsageViewImpl implements UsageViewEx {
         WriteIntentReadAction.run(runnable);
       }
     };
-    action.putValue(DUMB_AWARE_KEY, Boolean.valueOf(dumbAware));
+    action.putValue(DUMB_AWARE_KEY, dumbAware);
     addButtonToLowerPane(action);
   }
 
@@ -1997,7 +1997,7 @@ public class UsageViewImpl implements UsageViewEx {
            : ContainerUtil.mapNotNull(selectionPaths, p -> ObjectUtils.tryCast(p.getLastPathComponent(), TreeNode.class));
   }
 
-  private @NotNull JBIterable<TreeNode> traverseNodesRecursively(@NotNull List<? extends TreeNode> roots) {
+  private static @NotNull JBIterable<TreeNode> traverseNodesRecursively(@NotNull List<? extends TreeNode> roots) {
     return TreeUtil.treeNodeTraverser(null).withRoots(roots).traverse();
   }
 
