@@ -1,4 +1,4 @@
-// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2026 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.theoryinpractice.testng.util;
 
 import com.intellij.codeInsight.AnnotationUtil;
@@ -24,7 +24,6 @@ import com.intellij.psi.PsiClass;
 import com.intellij.psi.PsiClassObjectAccessExpression;
 import com.intellij.psi.PsiDocCommentOwner;
 import com.intellij.psi.PsiElement;
-import com.intellij.psi.PsiExpression;
 import com.intellij.psi.PsiField;
 import com.intellij.psi.PsiLiteralExpression;
 import com.intellij.psi.PsiManager;
@@ -32,12 +31,12 @@ import com.intellij.psi.PsiMethod;
 import com.intellij.psi.PsiModifier;
 import com.intellij.psi.PsiModifierListOwner;
 import com.intellij.psi.PsiNameValuePair;
-import com.intellij.psi.PsiTypeElement;
 import com.intellij.psi.SyntaxTraverser;
 import com.intellij.psi.javadoc.PsiDocComment;
 import com.intellij.psi.javadoc.PsiDocTag;
 import com.intellij.psi.search.GlobalSearchScope;
 import com.intellij.psi.search.searches.AllClassesSearch;
+import com.intellij.psi.search.searches.ClassInheritorsSearch;
 import com.intellij.psi.util.CachedValueProvider;
 import com.intellij.psi.util.CachedValuesManager;
 import com.intellij.psi.util.InheritanceUtil;
@@ -83,6 +82,7 @@ import java.util.HashSet;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 import java.util.jar.Attributes;
 import java.util.regex.Matcher;
@@ -104,57 +104,66 @@ public final class TestNGUtil {
 
   public static final String MAVEN_TEST_NG = "org.testng:testng";
   public static final String TEST_ANNOTATION_FQN = Test.class.getName();
+  public static final String DATA_PROVIDER_ANNOTATION_FQN = DataProvider.class.getName();
   public static final String TESTNG_PACKAGE = "org.testng";
   public static final String FACTORY_ANNOTATION_FQN = Factory.class.getName();
   public static final String[] CONFIG_ANNOTATIONS_FQN = {
-      "org.testng.annotations.Configuration",
-      Factory.class.getName(),
-      ObjectFactory.class.getName(),
-      DataProvider.class.getName(),
-      BeforeClass.class.getName(),
-      BeforeGroups.class.getName(),
-      BeforeMethod.class.getName(),
-      BeforeSuite.class.getName(),
-      BeforeTest.class.getName(),
-      AfterClass.class.getName(),
-      AfterGroups.class.getName(),
-      AfterMethod.class.getName(),
-      AfterSuite.class.getName(),
-      AfterTest.class.getName()
+    "org.testng.annotations.Configuration",
+    Factory.class.getName(),
+    ObjectFactory.class.getName(),
+    DATA_PROVIDER_ANNOTATION_FQN,
+    BeforeClass.class.getName(),
+    BeforeGroups.class.getName(),
+    BeforeMethod.class.getName(),
+    BeforeSuite.class.getName(),
+    BeforeTest.class.getName(),
+    AfterClass.class.getName(),
+    AfterGroups.class.getName(),
+    AfterMethod.class.getName(),
+    AfterSuite.class.getName(),
+    AfterTest.class.getName()
   };
 
- public static final String[] CONFIG_ANNOTATIONS_FQN_NO_TEST_LEVEL = {
-      "org.testng.annotations.Configuration",
-      Factory.class.getName(),
-      ObjectFactory.class.getName(),
-      BeforeClass.class.getName(),
-      BeforeGroups.class.getName(),
-      BeforeSuite.class.getName(),
-      BeforeTest.class.getName(),
-      AfterClass.class.getName(),
-      AfterGroups.class.getName(),
-      AfterSuite.class.getName(),
-      AfterTest.class.getName()
+  public static final String[] CONFIG_ANNOTATIONS_FQN_NO_TEST_LEVEL = {
+    "org.testng.annotations.Configuration",
+    Factory.class.getName(),
+    ObjectFactory.class.getName(),
+    BeforeClass.class.getName(),
+    BeforeGroups.class.getName(),
+    BeforeSuite.class.getName(),
+    BeforeTest.class.getName(),
+    AfterClass.class.getName(),
+    AfterGroups.class.getName(),
+    AfterSuite.class.getName(),
+    AfterTest.class.getName()
   };
 
   private static final @NonNls String[] CONFIG_JAVADOC_TAGS = {
-      "testng.configuration",
-      "testng.before-class",
-      "testng.before-groups",
-      "testng.before-method",
-      "testng.before-suite",
-      "testng.before-test",
-      "testng.after-class",
-      "testng.after-groups",
-      "testng.after-method",
-      "testng.after-suite",
-      "testng.after-test"
+    "testng.configuration",
+    "testng.before-class",
+    "testng.before-groups",
+    "testng.before-method",
+    "testng.before-suite",
+    "testng.before-test",
+    "testng.after-class",
+    "testng.after-groups",
+    "testng.after-method",
+    "testng.after-suite",
+    "testng.after-test"
   };
 
-  private static final List<String> JUNIT_ANNOTATIONS =
-      Arrays.asList("org.junit.Test", "org.junit.Before", "org.junit.BeforeClass", "org.junit.After", "org.junit.AfterClass");
+  private static final List<String> JUNIT_ANNOTATIONS = List.of(
+    "org.junit.Test",
+    "org.junit.Before",
+    "org.junit.BeforeClass",
+    "org.junit.After",
+    "org.junit.AfterClass"
+  );
 
   private static final @NonNls String SUITE_TAG_NAME = "suite";
+
+  public static final String DATA_PROVIDER_ATTRIBUTE = "dataProvider";
+  public static final String DATA_PROVIDER_CLASS_ATTRIBUTE = "dataProviderClass";
 
   public static boolean hasConfig(PsiModifierListOwner element) {
     return hasConfig(element, CONFIG_ANNOTATIONS_FQN);
@@ -162,15 +171,11 @@ public final class TestNGUtil {
 
   public static boolean hasConfig(PsiModifierListOwner element,
                                   String[] configAnnotationsFqn) {
-    if (element instanceof PsiClass) {
-      for (PsiMethod method : ((PsiClass)element).getAllMethods()) {
-        if (isConfigMethod(method, configAnnotationsFqn)) return true;
-      }
-    } else {
-      if (!(element instanceof PsiMethod)) return false;
-      return isConfigMethod((PsiMethod)element, configAnnotationsFqn);
-    }
-    return false;
+    return switch (element) {
+      case PsiClass psiClass -> ContainerUtil.exists(psiClass.getAllMethods(), method -> isConfigMethod(method, configAnnotationsFqn));
+      case PsiMethod psiMethod -> isConfigMethod(psiMethod, configAnnotationsFqn);
+      case null, default -> false;
+    };
   }
 
   private static boolean isConfigMethod(PsiMethod method, String[] configAnnotationsFqn) {
@@ -190,26 +195,8 @@ public final class TestNGUtil {
   }
 
   public static String getConfigAnnotation(PsiMethod method) {
-    if (method != null) {
-      for (String fqn : CONFIG_ANNOTATIONS_FQN) {
-        if (AnnotationUtil.isAnnotated(method, fqn, 0)) return fqn;
-      }
-    }
-    return null;
-  }
-
-  public static boolean isTestNGAnnotation(PsiAnnotation annotation) {
-    String qName = annotation.getQualifiedName();
-    if (qName != null) {
-      if (qName.equals(TEST_ANNOTATION_FQN)) return true;
-      for (String qn : CONFIG_ANNOTATIONS_FQN) {
-        if (qName.equals(qn)) return true;
-      }
-      for (String qn : CONFIG_ANNOTATIONS_FQN) {
-        if (qName.equals(qn)) return true;
-      }
-    }
-    return false;
+    if (method == null) return null;
+    return ContainerUtil.find(CONFIG_ANNOTATIONS_FQN, fqn -> AnnotationUtil.isAnnotated(method, fqn, 0));
   }
 
   public static boolean hasTest(PsiModifierListOwner element) {
@@ -222,16 +209,11 @@ public final class TestNGUtil {
   }
 
   public static boolean hasTest(PsiModifierListOwner element, boolean checkHierarchy, boolean checkDisabled, boolean checkJavadoc) {
-    final PsiClass aClass;
-    if (element instanceof PsiClass) {
-      aClass = ((PsiClass)element);
-    }
-    else if (element instanceof PsiMethod) {
-      aClass = ((PsiMethod)element).getContainingClass();
-    }
-    else {
-      aClass = null;
-    }
+    final PsiClass aClass = switch (element) {
+      case PsiClass psiClass -> psiClass;
+      case PsiMethod psiMethod -> psiMethod.getContainingClass();
+      case null, default -> null;
+    };
     if (aClass == null || !PsiClassUtil.isRunnableClass(aClass, true, false)) {
       return false;
     }
@@ -248,16 +230,13 @@ public final class TestNGUtil {
       }
       return true;
     }
-    if (checkJavadoc && getTextJavaDoc((PsiDocCommentOwner)element) != null)
-      return true;
+    if (checkJavadoc && getTextJavaDoc((PsiDocCommentOwner)element) != null) return true;
     //now we check all methods for the test annotation
     if (element instanceof PsiClass psiClass) {
       for (PsiMethod method : psiClass.getAllMethods()) {
         PsiAnnotation annotation = AnnotationUtil.findAnnotation(method, true, TEST_ANNOTATION_FQN);
         if (annotation != null) {
-          if (checkDisabled) {
-            if (isDisabled(annotation)) continue;
-          }
+          if (checkDisabled && isDisabled(annotation)) continue;
           return true;
         }
         if (AnnotationUtil.isAnnotated(method, FACTORY_ANNOTATION_FQN, 0)) return true;
@@ -275,8 +254,9 @@ public final class TestNGUtil {
       //if it's a method, we check if the class it's in has a global @Test annotation
       PsiClass psiClass = ((PsiMethod)element).getContainingClass();
       if (psiClass != null) {
-        final PsiAnnotation annotation = checkHierarchy ? AnnotationUtil.findAnnotationInHierarchy(psiClass, Collections.singleton(TEST_ANNOTATION_FQN))
-                                                        : AnnotationUtil.findAnnotation(psiClass, true, TEST_ANNOTATION_FQN);
+        final PsiAnnotation annotation =
+          checkHierarchy ? AnnotationUtil.findAnnotationInHierarchy(psiClass, Collections.singleton(TEST_ANNOTATION_FQN))
+                         : AnnotationUtil.findAnnotation(psiClass, true, TEST_ANNOTATION_FQN);
         if (annotation != null) {
           if (checkDisabled && isDisabled(annotation)) return false;
           return !hasConfig(element);
@@ -303,15 +283,9 @@ public final class TestNGUtil {
 
   public static boolean isAnnotatedWithParameter(PsiAnnotation annotation, String parameter, Set<String> values) {
     final PsiAnnotationMemberValue attributeValue = annotation.findDeclaredAttributeValue(parameter);
-    if (attributeValue != null) {
-      Collection<String> matches = extractValuesFromParameter(attributeValue);
-      for (String s : matches) {
-        if (values.contains(s)) {
-          return true;
-        }
-      }
-    }
-    return false;
+    if (attributeValue == null) return false;
+    Collection<String> matches = extractValuesFromParameter(attributeValue);
+    return ContainerUtil.exists(matches, values::contains);
   }
 
   public static Set<String> getAnnotationValues(String parameter, PsiClass... classes) {
@@ -322,8 +296,6 @@ public final class TestNGUtil {
     return set;
   }
 
-  /**
-   */
   public static void collectAnnotationValues(final Map<String, Collection<String>> results, PsiMethod[] psiMethods, PsiClass... classes) {
     final Set<String> test = new HashSet<>(1);
     test.add(TEST_ANNOTATION_FQN);
@@ -362,7 +334,8 @@ public final class TestNGUtil {
         if (value != null) {
           values.addAll(extractValuesFromParameter(value));
         }
-      } else {
+      }
+      else {
         values.addAll(extractAnnotationValuesFromJavaDoc(getTextJavaDoc(commentOwner), parameter));
       }
     }
@@ -370,26 +343,18 @@ public final class TestNGUtil {
 
   private static Collection<String> extractAnnotationValuesFromJavaDoc(PsiDocTag tag, String parameter) {
     if (tag == null) return Collections.emptyList();
-    Collection<String> results = new ArrayList<>();
     Matcher matcher = Pattern.compile("@testng.test(?:.*)" + parameter + "\\s*=\\s*\"(.*?)\".*").matcher(tag.getText());
-    if (matcher.matches()) {
-      String[] groups = matcher.group(1).split("[,\\s]");
-      for (String group : groups) {
-        final String trimmed = group.trim();
-        if (!trimmed.isEmpty()) {
-          results.add(trimmed);
-        }
-      }
-    }
-    return results;
+    if (!matcher.matches()) return Collections.emptyList();
+    String[] groups = matcher.group(1).split("[,\\s]");
+    return Arrays.stream(groups).map(String::trim).filter(s -> !s.isEmpty()).toList();
   }
 
   private static Collection<String> extractValuesFromParameter(PsiAnnotationMemberValue value) {
     return JBIterable.from(AnnotationUtil.arrayAttributeValues(value))
-                     .filter(PsiLiteralExpression.class)
-                     .map(PsiLiteralExpression::getValue)
-                     .filter(String.class)
-                     .toList();
+      .filter(PsiLiteralExpression.class)
+      .map(PsiLiteralExpression::getValue)
+      .filter(String.class)
+      .toList();
   }
 
   public static PsiClass @Nullable [] getAllTestClasses(final TestClassFilter filter, boolean sync) {
@@ -401,10 +366,10 @@ public final class TestNGUtil {
       final PsiManager manager = PsiManager.getInstance(filter.getProject());
       final GlobalSearchScope projectScope = GlobalSearchScope.projectScope(manager.getProject());
       final GlobalSearchScope scope = projectScope.intersectWith(filter.getScope());
-      for (final PsiClass psiClass : AllClassesSearch.search(scope, manager.getProject()).asIterable()) {
+      for (final PsiClass psiClass : AllClassesSearch.search(scope, manager.getProject())) {
         if (filter.isAccepted(psiClass)) {
           if (indicator != null) {
-            indicator.setText2(TestngBundle.message("testng.util.found.test.class", ReadAction.compute(psiClass::getQualifiedName)));
+            indicator.setText2(TestngBundle.message("testng.util.found.test.class", ReadAction.computeBlocking(psiClass::getQualifiedName)));
           }
           set.add(psiClass);
         }
@@ -412,10 +377,12 @@ public final class TestNGUtil {
       holder[0] = set.toArray(PsiClass.EMPTY_ARRAY);
     };
     if (sync) {
-       ProgressManager.getInstance().runProcessWithProgressSynchronously(process, TestngBundle.message("testng.util.searching.test.progress.title"), true, filter.getProject());
+      ProgressManager.getInstance()
+        .runProcessWithProgressSynchronously(process, TestngBundle.message("testng.util.searching.test.progress.title"), true,
+                                             filter.getProject());
     }
     else {
-       process.run();
+      process.run();
     }
     return holder[0];
   }
@@ -453,14 +420,8 @@ public final class TestNGUtil {
   }
 
   public static boolean containsJunitAnnotations(PsiClass psiClass) {
-    if (psiClass != null) {
-      for (PsiMethod method : psiClass.getMethods()) {
-        if (containsJunitAnnotations(method)) {
-          return true;
-        }
-      }
-    }
-    return false;
+    if (psiClass == null) return false;
+    return ContainerUtil.exists(psiClass.getMethods(), TestNGUtil::containsJunitAnnotations);
   }
 
   public static boolean containsJunitAnnotations(PsiMethod method) {
@@ -494,23 +455,65 @@ public final class TestNGUtil {
     return false;
   }
 
-  public static PsiClass getProviderClass(final PsiElement element, final PsiClass topLevelClass) {
+  public static @NotNull List<PsiClass> getProviderClasses(@NotNull final PsiElement element, @Nullable final PsiClass topLevelClass) {
     final PsiAnnotation annotation = PsiTreeUtil.getParentOfType(element, PsiAnnotation.class);
-    if (annotation != null) {
-      final PsiAnnotationMemberValue value = annotation.findDeclaredAttributeValue("dataProviderClass");
-      if (value instanceof PsiClassObjectAccessExpression) {
-        final PsiTypeElement operand = ((PsiClassObjectAccessExpression)value).getOperand();
-        final PsiClass psiClass = PsiUtil.resolveClassInType(operand.getType());
-        if (psiClass != null) {
-          return psiClass;
+    if (annotation == null) return topLevelClass != null ? List.of(topLevelClass) : List.of();
+    PsiAnnotationMemberValue value = extractDataProviderClass(annotation);
+    List<PsiAnnotationMemberValue> values = (value == null)
+                                            ? findDataProviderClasses(PsiTreeUtil.getParentOfType(element, PsiMethod.class))
+                                            : List.of(value);
+
+    List<PsiClass> result = values.stream()
+      .filter(PsiClassObjectAccessExpression.class::isInstance)
+      .map(PsiClassObjectAccessExpression.class::cast)
+      .map(expression -> PsiUtil.resolveClassInType(expression.getOperand().getType()))
+      .filter(Objects::nonNull)
+      .toList();
+
+    return !result.isEmpty()
+           ? result
+           : topLevelClass != null ? List.of(topLevelClass) : List.of();
+  }
+
+  public static @Nullable PsiAnnotationMemberValue extractDataProviderClass(@NotNull PsiAnnotation annotation) {
+    return TEST_ANNOTATION_FQN.equals(annotation.getQualifiedName())
+           ? annotation.findDeclaredAttributeValue(DATA_PROVIDER_CLASS_ATTRIBUTE)
+           : null;
+  }
+
+  private static List<PsiAnnotationMemberValue> findDataProviderClasses(@Nullable PsiMethod method) {
+    if (method == null) return List.of();
+    PsiClass aClass = method.getContainingClass();
+
+    List<PsiAnnotationMemberValue> result = new ArrayList<>();
+    while (aClass != null && result.isEmpty()) { // find parent class with data provider class
+      for (PsiAnnotation annotation : aClass.getAnnotations()) {
+        PsiAnnotationMemberValue value = extractDataProviderClass(annotation);
+        if (value != null) {
+          result.add(value);
+          break;
+        }
+      }
+      aClass = aClass.getSuperClass();
+    }
+
+    if (isVersionOrGreaterThan(method.getProject(), ModuleUtilCore.findModuleForPsiElement(method), 7, 0, 0)) {
+      aClass = method.getContainingClass();
+      if (aClass == null) return List.of();
+      for (PsiClass psiClass : ClassInheritorsSearch.search(aClass, aClass.getResolveScope(), true)) {
+        for (PsiAnnotation annotation : psiClass.getAnnotations()) {
+          PsiAnnotationMemberValue value = extractDataProviderClass(annotation);
+          if (value != null) result.add(value);
         }
       }
     }
-    return topLevelClass;
+
+    return result;
   }
 
   /**
    * Returns whether the version is greater or equal to the one passed into this method.
+   * Returns false when the version cannot be detected.
    * Check only works when the supplied version is <= 7.4.0, otherwise it will always return true.
    */
   public static boolean isVersionOrGreaterThan(@NotNull Project project,
@@ -527,27 +530,23 @@ public final class TestNGUtil {
 
   private static @Nullable Version detectVersion(@NotNull Project project, @NotNull Module module) {
     return CachedValuesManager.getManager(project).getCachedValue(module, () -> {
-      String version = null;
       JavaPsiFacade psiFacade = JavaPsiFacade.getInstance(project);
       PsiClass aClass = psiFacade.findClass("org.testng.internal.Version",
                                             GlobalSearchScope.moduleWithDependenciesAndLibrariesScope(module));
-      if (aClass != null) {
-        PsiField versionField = aClass.findFieldByName("VERSION", false);
-        if (versionField != null) {
-          PsiExpression initializer = versionField.getInitializer();
-          if (initializer instanceof PsiLiteralExpression) {
-            Object eval = ((PsiLiteralExpression)initializer).getValue();
-            if (eval instanceof String) {
-              version = (String)eval;
-            }
-          } else {
-            version = String.valueOf(Integer.MAX_VALUE);
-          }
-        }
-      }
-      if (version == null) return null;
+      if (aClass == null) return null;
+      PsiField versionField = aClass.findFieldByName("VERSION", false);
+      if (versionField == null) return null;
+
+      String version = versionField.getInitializer() instanceof PsiLiteralExpression l && l.getValue() instanceof String v
+                       ? v : String.valueOf(Integer.MAX_VALUE);
       return CachedValueProvider.Result.createSingleDependency(Version.parseVersion(version),
                                                                ProjectRootManager.getInstance(module.getProject()));
     });
+  }
+
+  public static String getAttributeValue(@NotNull PsiAnnotation annotation, @NotNull String attributeName) {
+    final PsiAnnotationMemberValue dataProviderMethodName = annotation.findDeclaredAttributeValue(attributeName);
+    if (dataProviderMethodName == null) return null;
+    return StringUtil.unquoteString(dataProviderMethodName.getText());
   }
 }
